--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>INGRAD</title>
    <link href="./resources/css/resetNew.css" rel="stylesheet" />
-    <link href="./resources/css/styleNew.css" rel="stylesheet" />
+   <link href="./resources/css/styleHeader.css" rel="stylesheet" />
+    <link href="./resources/css/styleNewMain.css" rel="stylesheet" />
+    
+
 </head>
 <body>
-        <!------ HEADER ------>
+        <!------------------------ HEADER ------------------------>
         <header class="header">
             <div class="header-container">
                 <div class="header-logo-container">
@@ -17,17 +20,17 @@
                 </div>
                 <nav class="header-nav">
                     <ul class="navigation-main">
-                        <li><a href="#">О компании</a></li>
-                        <li><a href="#">Новостройки</a></li>
-                        <li><a href="#">Условия покупки</a></li>
-                        <li><a href="#">Поддержка</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="https://new.ingrad.ru/">О компании</a></li>
+                        <li><a href="https://new.ingrad.ru/projects/comfort">Новостройки</a></li>
+                        <li><a href="https://new.ingrad.ru/conditions">Условия покупки</a></li>
+                        <li><a href="https://new.ingrad.ru/club">Поддержка</a></li>
+                        <li><a href="https://new.ingrad.ru/contacts">Контакты</a></li>
                     </ul>
                     <ul class="navigation-extra">
-                        <li><a href="#">8 495 324-31-18</a></li>
-                        <li><a href="#"><img src="./resources/images/icons/heart.svg" alt="like"></a></li>
+                        <li><a href="tel:+74951254532">+7 495 324-31-18</a></li>
+                        <li><a href="https://club.ingrad.ru/apartments/favorites"><img src="./resources/images/icons/heart.svg" alt="like"></a></li>
                         <li><a href="#"><img src="./resources/images/icons/search.svg" alt="search"></a></li>
-                        <li><a href=""><button class="authorise-button">Войти</button></a></li>
+                        <li><a href="https://club.ingrad.ru/login"><button class="authorise-button">Войти</button></a></li>
                     </ul>
                 </nav>
                 <div class="header-burger-icon-container">
@@ -43,19 +46,19 @@
                 <div class="header-burger-body">
                    <nav class="menu-burger">
                        <ul>
-                           <li class="autho-nav-li"><a href="#"><div class="autho-nav-block">
+                           <li class="autho-nav-li"><a href="https://club.ingrad.ru/login"><div class="autho-nav-block">
                                <div class="autho-nav-block-text">
                                    <h5>Авторизация</h5>
-                                   <h6>Для доступа в личный кабинет</h6>
+                                   <p class="autho-nav-block-text-small">Для доступа в личный кабинет</p>
                                </div>
                                <img src="./resources/images/icons/authorise.svg" alt="authorisation">
                            </div></a></li>
-                           <li><a href="#"><h5>Новостройки</h5></a></li>
-                           <li><a href="#"><h5>Условия покупки</h5></a></li>
-                           <li><a href="#"><h5>Поддержка</h5></a></li>
-                           <li><a href="#"><h5>О компании</h5></a></li>
-                           <li><a href="#"><h5>Контакты</h5></a></li>
-                           <li class="phone-number"><a href="#"><h5>+7 (495) 152-56-01</h5></a></li>
+                           <li><a href="https://new.ingrad.ru/projects/comfort"><h5>Новостройки</h5></a></li>
+                           <li><a href="https://new.ingrad.ru/conditions"><h5>Условия покупки</h5></a></li>
+                           <li><a href="https://new.ingrad.ru/conditions"><h5>Поддержка</h5></a></li>
+                           <li><a href="https://new.ingrad.ru/"><h5>О компании</h5></a></li>
+                           <li><a href="https://new.ingrad.ru/contacts"><h5>Контакты</h5></a></li>
+                           <li class="phone-number"><a href="tel:+74951254532"><h5>+7 (495) 152-56-01</h5></a></li>
                            <li class="contacts-nav"><a href="#"><img src="./resources/images/icons/google play burger.svg" alt="google play logo"></a></li>
                            <li class="contacts-nav"><a href="#"><img src="./resources/images/icons/app store burger.svg" alt="app store logo"></a></li>
                        </ul>
@@ -63,11 +66,13 @@
                </div>
             </div>
         </header>
+        <!------------------------ MAIN ------------------------>
         <main class="main">
+            <!-------------- SECTION 1 -------------->
             <section class="section-first">
                 <div class="section-first-header">
                     <h1>INGRAD</h1>
-                    <h2>Центр — там, где вы</h2>
+                    <h1 class="subheading-main">Центр — там, где вы</h1>
                 </div>
                 <div class="section-first-video responsive-wrapper">
                     <img src="./resources/images/youtube-cover.png" alt="youtube-cover">
@@ -75,13 +80,15 @@
                 </div>
                 <p class="section-first-text">Сотрудничая со знаковыми архитектурными бюро, ГК «Инград» строит жилые кварталы с помещениями для коммерческой инфраструктуры на первых этажах, подземными паркингами и линейными парковками, детскими садами, школами и приватными дворами. Каждый проект имеет свое лицо и имя, в каждом — уникальный подход к архитектуре, дизайну общественных зон, инженерным и планировочным решениям, благоустройству территории. Но есть общее, что объединяет все проекты компании и отличает их от конкурентов.</p>
             </section>
-            <section class="section-more-clients">
-                <div class="section-more-clients-text">
+            <!-------------- SECTION MORE FLATS -------------->
+            <section class="section-more-flats section-border-card">
+                <div class="section-text">
                     <h3>Больше, чем квартиры</h3>
                     <p>Наши проекты заставляют по-новому взглянуть на качество жизни. Мы предлагаем не просто жильё — мы формируем образ жизни. Живите по-новому — вместе с INGRAD.</p>
                 </div>
             </section>
-            <div class="section-more-clients-images-card">
+            <!-------------- DIV MORE FLATS IMAGES -------------->
+            <div class="section-more-flats-images-card">
                 <div class="image-card">
                     <img src="./resources/images/image-1.png" alt="image">
                 </div>
@@ -98,7 +105,60 @@
                     <img src="./resources/images/image-5.png" alt="image">
                 </div>
             </div>
-            
+            <!-------------- SECTION STATISTICS -------------->
+            <section class="section-statistics">
+                <div class="section-statistics-image">
+                    <img src="./resources/images/image-6.png" alt="family taking selfie">
+                </div>
+                <div class="section-statistics-text-block">
+                    <div class="section-statistics-text-individual">
+                        <h2 class="smaller-statistics">16000</h2>
+                        <p class="statistics-text">семей живут в наших квартирах</p>
+                    </div>
+                    <div class="section-statistics-text-individual">
+                        <h2>4000</h2>
+                        <p class="statistics-text">детей ходят в наши школы</p>
+                    </div>
+                     <div class="section-statistics-text-individual">
+                        <h2>1000</h2>
+                        <p class="statistics-text">малышей ходят в наши детские сады</p>
+                    </div>
+                </div>
+            </section>
+            <!-------------- SECTION MORE CLIENTS -------------->
+            <section class="section-border-card">
+                <div class="section-text">
+                    <h3 class="section-text-header">Больше, чем клиенты</h3>
+                    <p>В работе мы ориентируемся на пожелания клиентов.<br>
+От выбора площадки под новые проекты до формы оплаты договора, от дизайна жилых помещений до качества отделки и технического оборудования.</p>
+                </div>
+                <div class="section-more-clients-cards">
+                    <div class="section-more-clients-cards-individual card1">
+                        <!-- <img src="./resources/images/cards/card1.png" alt=""> -->
+                        <div class="caption">
+                            <h4>Авторская архитектура от ведущих бюро Москвы</h4>
+                        </div>
+                    </div>
+                    <div class="section-more-clients-cards-individual card2">
+                        <!-- <img src="./resources/images/cards/card2.png" alt=""> -->
+                        <div class="caption">
+                            <h4>Дизайн общественных зон от студий с мировым именем</h4>
+                        </div>
+                    </div>
+                <div class="section-more-clients-cards-individual card3">
+                        <!-- <img src="./resources/images/cards/card3.png" alt=""> -->
+                        <div class="caption">
+                            <h4>Предчистовая отделка White Box — быстрая и качественная</h4>
+                        </div>
+                </div>
+                <div class="section-more-clients-cards-individual card4">
+                       <!--  <img src="./resources/images/cards/card4.png" alt=""> -->
+                        <div class="caption">
+                            <h4>Дизайнерская отделка — интерьеры «аквамарин» и «оникс»</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <script src="./resources/script.js" type="text/javascript"></script>
 </body>
