added num count + fonts

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                 </div>
                 <div class="section-statistics-text-block">
                     <div class="section-statistics-text-individual">
-                        <h2 class="smaller-statistics">16000</h2>
+                        <h2 class="smaller-statistics num" data-val="16000">16000</h2>
                         <p class="statistics-text">семей живут в наших квартирах</p>
                     </div>
                     <div class="section-statistics-text-individual">
-                        <h2>4000</h2>
+                        <h2 data-val="4000" class="num">4000</h2>
                         <p class="statistics-text">детей ходят в наши школы</p>
                     </div>
                      <div class="section-statistics-text-individual">
-                        <h2>1000</h2>
+                        <h2 data-val="1000" class="num">1000</h2>
                         <p class="statistics-text">малышей ходят в наши детские сады</p>
                     </div>
                 </div>
