final interact added

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                 </div>
                 <div class="section-statistics-text-block">
                     <div class="section-statistics-text-individual">
-                        <h2 class="smaller-statistics num" data-val="16000">16000</h2>
+                        <h2 class="smaller-statistics num" data-target="16000">0</h2>
                         <p class="statistics-text">семей живут в наших квартирах</p>
                     </div>
                     <div class="section-statistics-text-individual">
-                        <h2 data-val="4000" class="num">4000</h2>
+                        <h2 data-target="4000" class="num">0</h2>
                         <p class="statistics-text">детей ходят в наши школы</p>
                     </div>
                      <div class="section-statistics-text-individual">
-                        <h2 data-val="1000" class="num">1000</h2>
+                        <h2 data-target="1000" class="num">0</h2>
                         <p class="statistics-text">малышей ходят в наши детские сады</p>
                     </div>
                 </div>
@@ -147,6 +147,39 @@
                         <h3 class="section-text-header">Больше, чем клиенты</h3>
                         <p>В работе мы ориентируемся на пожелания клиентов.<br>
     От выбора площадки под новые проекты до формы оплаты договора, от дизайна жилых помещений до качества отделки и технического оборудования.</p>
+                    </div>
+                    <div data-slide="slide" class="slide">
+                        <div class="slide-items">
+                            <div class="slide-item">              
+                                <div class="caption-slide">
+                                    <h4>Авторская архитектура от ведущих бюро Москвы</h4>
+                                </div>
+<!--                                 <img src="./resources/images/cards/card1.png" alt="Img 1"> -->
+                            </div>
+                            <div class="slide-item">
+                                <div class="caption-slide">
+                                    <h4>Дизайн общественных зон от студий с мировым именем</h4>
+                                </div>
+<!--                                 <img src="./resources/images/cards/card2.png" alt="Img 2"> -->
+                            </div>
+                            <div class="slide-item">
+                                <div class="caption-slide">
+                                    <h4>Предчистовая отделка White Box — быстрая и качественная</h4>
+                                </div>
+<!--                                 <img src="./resources/images/cards/card3.png" alt="Img 3"> -->
+                            </div>
+                            <div class="slide-item">
+                                <div class="caption-slide">
+                                    <h4>Дизайнерская отделка — интерьеры «аквамарин» и «оникс</h4>
+                                </div>
+<!--                                 <img src="./resources/images/cards/card4.png" alt="Img 4"> -->
+                            </div>
+                        </div>
+                        <nav class="slide-nav">
+                            <div class="slide-thumb"></div>
+                            <button class="slide-prev"></button>
+                            <button class="slide-next"></button>
+                        </nav>
                     </div>
                     <div class="section-more-clients-cards">
                      <div class="section-cards-individual card1">
