--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="pop-up-content">
                       <button class="pop-up-close"><img src="./resources/images/icons/close.svg" alt=""></button>
                     <div class="pop-up-video">
-                            <iframe  class="iframe-youtube" allowfullscreen="allowfullscreen" allow="autoplay; fullscreen" src="https://www.youtube.com/embed/f1U9jheilKI?autoplay=1"></iframe>
+                            <iframe  class="iframe-youtube" allowfullscreen="allowfullscreen" allow="autoplay; fullscreen" src=""></iframe>
                         </div>
                     </div>
                 </div>
@@ -208,6 +208,7 @@
                         </div>
                     </div>
                 </section>
+                    
                 <section class="section-g">
                     <div class="g-background">
                         <img src="./resources/images/Vector-G.svg" alt="G">
